Fix disabled buttons not showing as disabled in-game

--- a/src/instruments/src/EFB/Assets/Performance.scss
+++ b/src/instruments/src/EFB/Assets/Performance.scss
@@ -3,7 +3,7 @@
 }
 
 .disabled {
-  background-color: #303747;
+  background-color: #303747 !important;
 }
 
 .error {
